<resources>
    <string name="app_name">ADMClient</string>
    <string name="reply">Reply</string>
    <string name="quote">Quote</string>
    <string name="reload">Reload</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="search_text">Insert text</string>
    <string name="error_empty_text">Text is empty</string>
    <string name="pref_signature">from ADMClient</string>
    <string name="pref_edit_anketa">Edit profile</string>
    <string name="pref_dbclear">Clear database</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="signature">Signature</string>
    <string name="user">User</string>
    <string name="additionally">Additionally</string>
    <string name="options">Options</string>
    <string name="empty">empty</string>
    <string name="list_is_empty">List is empty</string>
    <string name="exit_dialog_message">Do you really exit?</string>
    <string name="clear_database_dialog_message">Do you really want to clear the database?</string>
    <string name="about">About</string>
    <string name="app_crash_title">Oops, app crashed</string>
    <string name="show_error">Show error</string>
    <string name="app_crash_descr">We sincerely apologize for the software crash.</string>
    <string name="app_about">Mobile client\nforum.delphimaster.net</string>
    <string name="app_about_description">Write reviews on Google Play\nhttps://play.google.com/store/apps/details?id=com.virex.admclient</string>
    <string name="input_title">Input title</string>
    <string name="input_text">Input text</string>
    <string name="setunbookmark_dialog_message">There is marked %d post(s)\nRemove all bookmarks?</string>
    <string name="action_scroll_to_post">Go to new posts?</string>
    <string name="pref_show_exit_dialog_message">Confirmation on exit</string>
    <string name="pref_confirm_exit_dialog">Confirmation on exit</string>
    <string name="pref_confirm_exit_dialog_message">Ask next time to confirm exit?</string>
    <string name="pref_confirm_update_bookmarked_topics">Update marked topics in the background (every 15 minutes)</string>
    <string name="loading">Loading…</string>

    <string name="default_notification_channel_id">admclient_chanel</string>
    <string name="topic_is_closed">The thread is closed.</string>
    <string name="pref_set_dark_theme">Dark theme</string>
    <string name="decoration">Decoration</string>

    <string name="colorPrimary">Primary color</string>
    <string name="check_login">Check login</string>
    <string name="check_login_failure">Check login failure</string>
    <string name="check_login_sucess">Success login</string>
    <string name="no_limit">No limit</string>
    <string name="pref_topics_limit">No limits</string>

    <string name="scroll_to_up">Scroll up</string>
    <string name="scroll_to_bottom">Scroll bottom</string>
    <string name="terms_of_use">Use of this program assumes that you have read and accept: <a href="https://sites.google.com/view/admclient/privacypolicy">Privacy Policy</a></string>
    <string name="menu_terms_of_use">Terms of Use</string>

    <string-array name="topic_limit">
        <item>@string/no_limit</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

</resources>
